--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,6 @@ Make list stack under input (image disappears) on phone screen
 /*--------Beginning of Site CSS---------- */
 
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -88,13 +86,13 @@ h3 {
 /* ----------------Main Area--------------- */
 
 .main {
-  display: -webkit-box;
-  display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; 
    -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
   text-align: center;
   height: auto;
   margin: 0 auto;
@@ -200,13 +198,13 @@ output {
   }
 
 .projectdetails .innerform{
-  display: -webkit-box;
-  display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; 
    -webkit-flex-flow: row wrap;
-  justify-content: flex-start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 
@@ -257,19 +255,10 @@ output {
 
 /* ----------------Buttons--------------- */
 .controls button {
-  -moz-box-shadow:inset 0px 1px 0px 0px #e184f3;
-  -webkit-box-shadow:inset 0px 1px 0px 0px #e184f3;
   box-shadow:inset 0px 1px 0px 0px #e184f3;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #99B2B7), color-stop(1, #D5DED9));
-  background:-moz-linear-gradient(top, #99B2B7 5%, #D5DED9 100%);
-  background:-webkit-linear-gradient(top, #99B2B7 5%, #D5DED9 100%);
-  background:-o-linear-gradient(top, #99B2B7 5%, #D5DED9 100%);
-  background:-ms-linear-gradient(top, #99B2B7 5%, #D5DED9 100%);
   background:linear-gradient(to bottom, #99B2B7 5%, #D5DED9 100%);
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#99B2B7', endColorstr='#D5DED9',GradientType=0);
   background-color:#99B2B7;
-  -moz-border-radius:6px;
-  -webkit-border-radius:6px;
   border-radius:6px;
   border:1px solid #99B2B7;
   display:inline-block;
@@ -284,11 +273,6 @@ output {
   text-shadow:0px 1px 0px #9b14b3;
 }
 .controls button:hover {
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #D5DED9), color-stop(1, #99B2B7));
-  background:-moz-linear-gradient(top, #D5DED9 5%, #99B2B7 100%);
-  background:-webkit-linear-gradient(top, #D5DED9 5%, #99B2B7 100%);
-  background:-o-linear-gradient(top, #D5DED9 5%, #99B2B7 100%);
-  background:-ms-linear-gradient(top, #D5DED9 5%, #99B2B7 100%);
   background:linear-gradient(to bottom, #D5DED9 5%, #99B2B7 100%);
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#D5DED9', endColorstr='#99B2B7',GradientType=0);
   background-color:#D5DED9;
